--- a/translations/admin+intl-icu.fr.yaml
+++ b/translations/admin+intl-icu.fr.yaml
@@ -50,6 +50,91 @@ page.user_edit.send_validation_email: Envoyer un e-mail de validation (en Franç
 page.user_delete.title: Supprimer l'utilisateur
 page.user_delete.content: Voulez-vous vraiment supprimer cet utilisateur ?
 
+## Stack
+### List
+page.stack.title: Stacks
+page.stack.description: Liste des stacks enregistrés sur le site.
+
+### Show
+page.stack_show.title: Informations de { name }
+page.stack_show.description: Toutes les informations de { name }.
+
+### Edit
+page.stack_edit.title: Modifier la stack
+page.stack_edit.description: Modifier les informations d'une stack.
+
+### Delete
+page.stack_delete.title: Supprimer la stack
+page.stack_delete.content: Voulez-vous vraiment supprimer cette stack ?
+
+## Tech
+### List
+page.tech.title: Techs
+page.tech.description: Liste des techs enregistrés sur le site.
+
+### Show
+page.tech_show.title: Informations de { name }
+page.tech_show.description: Toutes les informations de { name }.
+
+### Edit
+page.tech_edit.title: Modifier la tech
+page.tech_edit.description: Modifier les informations d'une tech.
+
+### Delete
+page.tech_delete.title: Supprimer la tech
+page.tech_delete.content: Voulez-vous vraiment supprimer cette tech ?
+
+## Category
+### List
+page.category.title: Categories
+page.category.description: Liste des categories enregistrés sur le site.
+
+### Show
+page.category_show.title: Informations de { name }
+page.category_show.description: Toutes les informations de { name }.
+
+### Edit
+page.category_edit.title: Modifier la category
+page.category_edit.description: Modifier les informations d'une category.
+
+### Delete
+page.category_delete.title: Supprimer la category
+page.category_delete.content: Voulez-vous vraiment supprimer cette category ?
+
+## Request
+### List
+page.request.title: Requêtes
+page.request.description: Liste des requêtes enregistrés sur le site.
+
+### Show
+page.request_show.title: Informations de { name }
+page.request_show.description: Toutes les informations de { name }.
+
+### Edit
+page.request_edit.title: Modifier la requête
+page.request_edit.description: Modifier les informations d'une requête.
+
+### Delete
+page.request_delete.title: Supprimer la requête
+page.request_delete.content: Voulez-vous vraiment supprimer cette requête ?
+
+## Vote
+### List
+page.vote.title: Votes
+page.vote.description: Liste des votes enregistrés sur le site.
+
+### Show
+page.vote_show.title: Informations de { name }
+page.vote_show.description: Toutes les informations de { name }.
+
+### Edit
+page.vote_edit.title: Modifier la vote
+page.vote_edit.description: Modifier les informations d'une vote.
+
+### Delete
+page.vote_delete.title: Supprimer la vote
+page.vote_delete.content: Voulez-vous vraiment supprimer cette vote ?
+
 # Flashes
 ## User
 flash.user.verified: L'utilisateur { email } est maintenant vérifié.
