--- a/translations/menu+intl-icu.fr.yaml
+++ b/translations/menu+intl-icu.fr.yaml
@@ -1,6 +1,11 @@
 # Back office
 back_office.home: Accueil
 back_office.users: Utilisateurs
+back_office.stacks: Stacks
+back_office.techs: Techs
+back_office.votes: Votes
+back_office.categories: Catégories
+back_office.requests: Requêtes
 
 # Global search
 global_search.techs: Technologies
