--- a/translations/messages+intl-icu.en.yaml
+++ b/translations/messages+intl-icu.en.yaml
@@ -112,8 +112,27 @@ page.contact.title: Contact
 page.contact.description: Learn how to get in touch with the StackUp staff here.
 
 ## Cookie Policy
-page.cookie_policy.title: Cookie Policy
+page.cookie_policy.title: Cookie Policy for StackUp
 page.cookie_policy.description: Concerned about your privacy and why we use cookies? Your answers here.
+page.cookie_policy.presentation: This is the Cookie Policy for StackUp, accessible from www.stack-up.tech
+page.cookie_policy.what_are_cookies.title: What Are Cookies
+page.cookie_policy.what_are_cookies.description: As is common practice with almost all professional websites this site uses cookies, which are tiny files that are downloaded to your computer, to improve your experience. This page describes what information they gather, how we use it and why we sometimes need to store these cookies. We will also share how you can prevent these cookies from being stored however this may downgrade or 'break' certain elements of the sites functionality.
+page.cookie_policy.how_we_use_cookies.title: How We Use Cookies
+page.cookie_policy.how_we_use_cookies.description: We use cookies for a variety of reasons detailed below. Unfortunately in most cases there are no industry standard options for disabling cookies without completely disabling the functionality and features they add to this site. It is recommended that you leave on all cookies if you are not sure whether you need them or not in case they are used to provide a service that you use.
+page.cookie_policy.disabling_cookies.title: Disabling Cookies
+page.cookie_policy.disabling_cookies.description: You can prevent the setting of cookies by adjusting the settings on your browser (see your browser Help for how to do this). Be aware that disabling cookies will affect the functionality of this and many other websites that you visit. Disabling cookies will usually result in also disabling certain functionality and features of this site. Therefore, it is recommended that you do not disable cookies.
+page.cookie_policy.the_cookies_we_set.title: The Cookies We Set
+page.cookie_policy.the_cookies_we_set.account_related_cookies.title: Account related cookies
+page.cookie_policy.the_cookies_we_set.account_related_cookies.description: If you create an account with us then we will use cookies for the management of the signup process and general administration. These cookies will usually be deleted when you log out however in some cases they may remain afterwards to remember your site preferences when logged out.
+page.cookie_policy.the_cookies_we_set.login_related_cookies.title: Login related cookies
+page.cookie_policy.the_cookies_we_set.login_related_cookies.description: We use cookies when you are logged in so that we can remember this fact. This prevents you from having to log in every single time you visit a new page. These cookies are typically removed or cleared when you log out to ensure that you can only access restricted features and areas when logged in.
+page.cookie_policy.the_cookies_we_set.forms_related_cookies.title: Forms related cookies
+page.cookie_policy.the_cookies_we_set.forms_related_cookies.description: When you submit data to through a form such as those found on contact pages or comment forms cookies may be set to remember your user details for future correspondence.
+page.cookie_policy.third_party_cookies.title: Third Party Cookies
+page.cookie_policy.third_party_cookies.description: In some special cases we also use cookies provided by trusted third parties. The following section details which third party cookies you might encounter through this site.
+page.cookie_policy.third_party_cookies.social_media.description: We also use social media buttons and/or plugins on this site that allow you to connect with your social network in various ways. For these to work the following social media sites including Github, will set cookies through our site which may be used to enhance your profile on their site or contribute to the data they hold for various purposes outlined in their respective privacy policies.
+page.cookie_policy.more_information.title: More Information
+page.cookie_policy.more_information.description: Hopefully that has clarified things for you and as was previously mentioned if there is something that you aren't sure whether you need or not it's usually safer to leave cookies enabled in case it does interact with one of the features you use on our site.
 
 ## Privacy Policy
 page.privacy_policy.title: Privacy Policy
