--- a/translations/messages+intl-icu.fr.yaml
+++ b/translations/messages+intl-icu.fr.yaml
@@ -114,6 +114,25 @@ page.contact.description: Apprenez comment entrer en contact avec l'équipe Stac
 ## Cookie Policy
 page.cookie_policy.title: Politique de cookies
 page.cookie_policy.description: Préoccupé par votre vie privée et pourquoi nous utilisons des cookies ? Vos réponses ici.
+page.cookie_policy.presentation: Ci-dessous la politique de cookies de StackUp, accessible depuis www.stack-up.tech
+page.cookie_policy.what_are_cookies.title: Qu'est ce que les cookies
+page.cookie_policy.what_are_cookies.description: Comme c'est la pratique courante avec presque tous les sites Web professionnels, ce site utilise des cookies, qui sont de petits fichiers téléchargés sur votre ordinateur, pour améliorer votre expérience. Cette page décrit les informations qu'ils recueillent, comment nous les utilisons et pourquoi nous avons parfois besoin de stocker ces cookies. Nous partagerons également comment vous pouvez empêcher le stockage de ces cookies, mais cela peut dégrader ou "casser" certains éléments de la fonctionnalité des sites.
+page.cookie_policy.how_we_use_cookies.title: Comment nous utilisons les cookies
+page.cookie_policy.how_we_use_cookies.description: Nous utilisons des cookies pour diverses raisons détaillées ci-dessous. Malheureusement, dans la plupart des cas, il n'existe pas d'options standard de l'industrie pour désactiver les cookies sans désactiver complètement les fonctionnalités et fonctionnalités qu'ils ajoutent à ce site. Il est recommandé de laisser tous les cookies si vous n'êtes pas sûr d'en avoir besoin ou non au cas où ils seraient utilisés pour fournir un service que vous utilisez.
+page.cookie_policy.disabling_cookies.title: désactiver les cookies
+page.cookie_policy.disabling_cookies.description: Vous pouvez empêcher l'installation de cookies en ajustant les paramètres de votre navigateur (voir l'aide de votre navigateur pour savoir comment procéder). Sachez que la désactivation des cookies affectera la fonctionnalité de ce site et de nombreux autres sites Web que vous visitez. La désactivation des cookies entraînera généralement la désactivation de certaines fonctionnalités et caractéristiques de ce site. Par conséquent, il est recommandé de ne pas désactiver les cookies.
+page.cookie_policy.the_cookies_we_set.title: Les cookies que nous utilisons
+page.cookie_policy.the_cookies_we_set.account_related_cookies.title: Cookies liés au compte
+page.cookie_policy.the_cookies_we_set.account_related_cookies.description: Si vous créez un compte chez nous, nous utiliserons des cookies pour la gestion du processus d'inscription et l'administration générale. Ces cookies sont généralement supprimés lorsque vous vous déconnectez, mais dans certains cas, ils peuvent rester par la suite pour mémoriser vos préférences de site lorsque vous vous déconnectez.
+page.cookie_policy.the_cookies_we_set.login_related_cookies.title: Cookies liés à la connexion
+page.cookie_policy.the_cookies_we_set.login_related_cookies.description: Nous utilisons des cookies lorsque vous êtes connecté afin que nous puissions nous souvenir de ce fait. Cela vous évite d'avoir à vous connecter à chaque fois que vous visitez une nouvelle page. Ces cookies sont généralement supprimés ou effacés lorsque vous vous déconnectez pour vous assurer que vous ne pouvez accéder qu'aux fonctionnalités et zones restreintes lorsque vous êtes connecté.
+page.cookie_policy.the_cookies_we_set.forms_related_cookies.title: Cookies liés aux formulaires
+page.cookie_policy.the_cookies_we_set.forms_related_cookies.description: Lorsque vous soumettez des données via un formulaire tel que ceux trouvés sur les pages de contact ou les formulaires de commentaires, des cookies peuvent être configurés pour mémoriser vos informations d'utilisateur pour une correspondance future.
+page.cookie_policy.third_party_cookies.title: Cookies tiers
+page.cookie_policy.third_party_cookies.description: Dans certains cas particuliers, nous utilisons également des cookies fournis par des tiers de confiance. La section suivante détaille les cookies tiers que vous pourriez rencontrer via ce site.
+page.cookie_policy.third_party_cookies.social_media.description: Nous utilisons également des boutons et/ou des plugins de réseaux sociaux sur ce site qui vous permettent de vous connecter à votre réseau social de différentes manières. Pour que ceux-ci fonctionnent, les sites de médias sociaux suivants, y compris Github, installeront des cookies via notre site qui peuvent être utilisés pour améliorer votre profil sur leur site ou contribuer aux données qu'ils détiennent à diverses fins décrites dans leurs politiques de confidentialité respectives.
+page.cookie_policy.more_information.title: Plus d'informations
+page.cookie_policy.more_information.description: Nous espérons que cela a clarifié les choses pour vous et, comme mentionné précédemment, s'il y a quelque chose dont vous n'êtes pas sûr d'avoir besoin ou non, il est généralement plus sûr de laisser les cookies activés au cas où ils interagissent avec l'une des fonctionnalités que vous utilisez sur notre site.
 
 ## Privacy Policy
 page.privacy_policy.title: Politique de confidentialité
