--- a/translations/messages+intl-icu.en.yaml
+++ b/translations/messages+intl-icu.en.yaml
@@ -17,7 +17,7 @@ common.global_search: Global search
 common.or: or
 common.admin: Administration
 common.upload.default_alt: Uploaded image
-common.upload.click_or_drop: Drag and drop a file or click to browse
+common.upload.click_or_drop: Drag and drop a file or click t    o browse
 common.first_page: First page ({ number })
 common.previous_page: Previous page ({ number })
 common.page_number: Page { number }
@@ -137,6 +137,54 @@ page.cookie_policy.more_information.description: Hopefully that has clarified th
 ## Privacy Policy
 page.privacy_policy.title: Privacy Policy
 page.privacy_policy.description: StackUp's official privacy policy.
+page.privacy_policy.presentation.title: Privacy Policy for StackUp
+page.privacy_policy.presentation.description1: At StackUp, accessible from www.stack-up.tech, one of our main priorities is the privacy of our visitors. This Privacy Policy document contains types of information that is collected and recorded by StackUp and how we use it.
+page.privacy_policy.presentation.description2: If you have additional questions or require more information about our Privacy Policy, do not hesitate to contact us.
+page.privacy_policy.presentation.description3: This Privacy Policy applies only to our online activities and is valid for visitors to our website with regards to the information that they shared and/or collect in StackUp. This policy is not applicable to any information collected offline or via channels other than this website.
+page.privacy_policy.consent.title: Consent
+page.privacy_policy.consent.description: By using our website, you hereby consent to our Privacy Policy and agree to its terms.
+page.privacy_policy.information_we_collect.title: Information we collect
+page.privacy_policy.information_we_collect.description1: The personal information that you are asked to provide, and the reasons why you are asked to provide it, will be made clear to you at the point we ask you to provide your personal information.
+page.privacy_policy.information_we_collect.description2: If you contact us directly, we may receive additional information about you such as your name, email address, phone number, the contents of the message and/or attachments you may send us, and any other information you may choose to provide.
+page.privacy_policy.information_we_collect.description3: When you register for an Account, we may ask for your contact information, including items such as name, company name, address, email address, and telephone number.
+page.privacy_policy.how_we_use_your_information.title: How we use your information
+page.privacy_policy.how_we_use_your_information.tab: We use the information we collect in various ways, including to
+page.privacy_policy.how_we_use_your_information.subtab1: Provide, operate, and maintain our website
+page.privacy_policy.how_we_use_your_information.subtab2: Improve, personalize, and expand our website
+page.privacy_policy.how_we_use_your_information.subtab3: Understand and analyze how you use our website
+page.privacy_policy.how_we_use_your_information.subtab4: Develop new products, services, features, and functionality
+page.privacy_policy.how_we_use_your_information.subtab5: Communicate with you, either directly or through one of our partners, including for customer service, to provide you with updates and other information relating to the website, and for marketing and promotional purposes
+page.privacy_policy.how_we_use_your_information.subtab6: Send you emails
+page.privacy_policy.how_we_use_your_information.subtab7: Find and prevent fraud
+page.privacy_policy.log_files.title: Log Files
+page.privacy_policy.log_files.description: StackUp follows a standard procedure of using log files. These files log visitors when they visit websites. All hosting companies do this and a part of hosting services' analytics. The information collected by log files include internet protocol (IP) addresses, browser type, Internet Service Provider (ISP), date and time stamp, referring/exit pages, and possibly the number of clicks. These are not linked to any information that is personally identifiable. The purpose of the information is for analyzing trends, administering the site, tracking users' movement on the website, and gathering demographic information.
+page.privacy_policy.cookies_and_web_beacons.title: Cookies and Web Beacons
+page.privacy_policy.cookies_and_web_beacons.description: Like any other website, StackUp uses 'cookies'. These cookies are used to store information including visitors' preferences, and the pages on the website that the visitor accessed or visited. The information is used to optimize the users' experience by customizing our web page content based on visitors' browser type and/or other information.
+page.privacy_policy.advertising_partners_privacy_policies.title: Advertising Partners Privacy Policies
+page.privacy_policy.advertising_partners_privacy_policies.description1: You may consult this list to find the Privacy Policy for each of the advertising partners of StackUp.
+page.privacy_policy.advertising_partners_privacy_policies.description2: Third-party ad servers or ad networks uses technologies like cookies, JavaScript, or Web Beacons that are used in their respective advertisements and links that appear on StackUp, which are sent directly to users' browser. They automatically receive your IP address when this occurs. These technologies are used to measure the effectiveness of their advertising campaigns and/or to personalize the advertising content that you see on websites that you visit.
+page.privacy_policy.advertising_partners_privacy_policies.description3: Note that StackUp has no access to or control over these cookies that are used by third-party advertisers.
+page.privacy_policy.third_party_privacy_policies.title: Third Party Privacy Policies
+page.privacy_policy.third_party_privacy_policies.description1: StackUp's Privacy Policy does not apply to other advertisers or websites. Thus, we are advising you to consult the respective Privacy Policies of these third-party ad servers for more detailed information. It may include their practices and instructions about how to opt-out of certain options.
+page.privacy_policy.third_party_privacy_policies.description2: You can choose to disable cookies through your individual browser options. To know more detailed information about cookie management with specific web browsers, it can be found at the browsers' respective websites.
+page.privacy_policy.ccpa_privacy_rights.title: CCPA Privacy Rights (Do Not Sell My Personal Information)
+page.privacy_policy.ccpa_privacy_rights.description1: Under the CCPA, among other rights, California consumers have the right to
+page.privacy_policy.ccpa_privacy_rights.description2: Request that a business that collects a consumer's personal data disclose the categories and specific pieces of personal data that a business has collected about consumers.
+page.privacy_policy.ccpa_privacy_rights.description3: Request that a business delete any personal data about the consumer that a business has collected.
+page.privacy_policy.ccpa_privacy_rights.description4: Request that a business that sells a consumer's personal data, not sell the consumer's personal data.
+page.privacy_policy.ccpa_privacy_rights.description5: If you make a request, we have one month to respond to you. If you would like to exercise any of these rights, please contact us.
+page.privacy_policy.gdpr_data_protection_rights.title: GDPR Data Protection Rights
+page.privacy_policy.gdpr_data_protection_rights.description1: We would like to make sure you are fully aware of all of your data protection rights. Every user is entitled to the following
+page.privacy_policy.gdpr_data_protection_rights.description2: The right to access – You have the right to request copies of your personal data. We may charge you a small fee for this service.
+page.privacy_policy.gdpr_data_protection_rights.description3: The right to rectification – You have the right to request that we correct any information you believe is inaccurate. You also have the right to request that we complete the information you believe is incomplete.
+page.privacy_policy.gdpr_data_protection_rights.description4: The right to erasure – You have the right to request that we erase your personal data, under certain conditions.
+page.privacy_policy.gdpr_data_protection_rights.description5: The right to restrict processing – You have the right to request that we restrict the processing of your personal data, under certain conditions.
+page.privacy_policy.gdpr_data_protection_rights.description6: The right to object to processing – You have the right to object to our processing of your personal data, under certain conditions.
+page.privacy_policy.gdpr_data_protection_rights.description7: The right to data portability – You have the right to request that we transfer the data that we have collected to another organization, or directly to you, under certain conditions.
+page.privacy_policy.gdpr_data_protection_rights.description8: If you make a request, we have one month to respond to you. If you would like to exercise any of these rights, please contact us.
+page.privacy_policy.children_information.title: Children's Information
+page.privacy_policy.children_information.description1: Another part of our priority is adding protection for children while using the internet. We encourage parents and guardians to observe, participate in, and/or monitor and guide their online activity.
+page.privacy_policy.children_information.description2: StackUp does not knowingly collect any Personal Identifiable Information from children under the age of 13. If you think that your child provided this kind of information on our website, we strongly encourage you to contact us immediately and we will do our best efforts to promptly remove such information from our records.
 
 ## Terms of Use
 page.terms_of_use.title: Terms of Use
