--- a/translations/tables+intl-icu.en.yaml
+++ b/translations/tables+intl-icu.en.yaml
@@ -11,5 +11,6 @@ user.description: Description
 user.picture: Picture
 user.role.role_super_admin: Super admin
 user.role.role_admin: Admin
+user.role.role_moderator: Moderator
 user.role.role_allowed_to_switch: Allowed to switch
 user.role.role_user: User
