--- a/translations/tables+intl-icu.fr.yaml
+++ b/translations/tables+intl-icu.fr.yaml
@@ -11,5 +11,6 @@ user.description: Description
 user.picture: Image
 user.role.role_super_admin: Super administrateur
 user.role.role_admin: Administrateur
+user.role.role_moderator: Modérateur
 user.role.role_allowed_to_switch: Autorisé à changer
 user.role.role_user: Utilisateur
