--- a/translations/messages+intl-icu.fr.yaml
+++ b/translations/messages+intl-icu.fr.yaml
@@ -90,6 +90,54 @@ page.cookie_policy.more_information.description: Nous espérons que cela a clari
 # Privacy Policy
 page.privacy_policy.title: Politique de confidentialité
 page.privacy_policy.description: Politique de confidentialité officielle de StackUp.
+page.privacy_policy.presentation.title: Politique de confidentialité pour StackUp
+page.privacy_policy.presentation.description1: Chez StackUp, accessible depuis www.stack-up.tech, l'une de nos principales priorités est la confidentialité de nos visiteurs. Ce document de politique de confidentialité contient des types d'informations qui sont collectées et enregistrées par StackUp et comment nous les utilisons.
+page.privacy_policy.presentation.description2: Si vous avez des questions supplémentaires ou souhaitez plus d'informations sur notre politique de confidentialité, n'hésitez pas à nous contacter.
+page.privacy_policy.presentation.description3: Cette politique de confidentialité s'applique uniquement à nos activités en ligne et est valable pour les visiteurs de notre site Web en ce qui concerne les informations qu'ils ont partagées et/ou collectées dans StackUp. Cette politique ne s'applique pas aux informations collectées hors ligne ou via des canaux autres que ce site Web.
+page.privacy_policy.consent.title: Consentement
+page.privacy_policy.consent.description: En utilisant notre site Web, vous consentez par la présente à notre politique de confidentialité et acceptez ses conditions.
+page.privacy_policy.information_we_collect.title: Informations que nous collectons
+page.privacy_policy.information_we_collect.description1: Les informations personnelles que vous êtes invité à fournir, et les raisons pour lesquelles vous êtes invité à les fournir, vous seront précisées au moment où nous vous demanderons de fournir vos informations personnelles.
+page.privacy_policy.information_we_collect.description2: Si vous nous contactez directement, nous pouvons recevoir des informations supplémentaires vous concernant telles que votre nom, votre adresse e-mail, votre numéro de téléphone, le contenu du message et/ou des pièces jointes que vous pouvez nous envoyer, et toute autre information que vous pouvez choisir de fournir.
+page.privacy_policy.information_we_collect.description3: Lorsque vous créez un compte, nous pouvons vous demander vos coordonnées, y compris des éléments tels que le nom, le nom de l'entreprise, l'adresse, l'adresse e-mail et le numéro de téléphone.
+page.privacy_policy.how_we_use_your_information.title: Comment nous utilisons vos informations
+page.privacy_policy.how_we_use_your_information.tab: Nous utilisons les informations que nous recueillons de diverses manières, notamment pour
+page.privacy_policy.how_we_use_your_information.subtab1: Fournir, exploiter et maintenir notre site Web
+page.privacy_policy.how_we_use_your_information.subtab2: Améliorer, personnaliser et développer notre site Web
+page.privacy_policy.how_we_use_your_information.subtab3: Comprendre et analyser la façon dont vous utilisez notre site Web
+page.privacy_policy.how_we_use_your_information.subtab4: Développer de nouveaux produits, services, caractéristiques et fonctionnalités
+page.privacy_policy.how_we_use_your_information.subtab5: Communiquer avec vous, directement ou par l'intermédiaire de l'un de nos partenaires, y compris pour le service client, pour vous fournir des mises à jour et d'autres informations relatives au site Web, et à des fins de marketing et de promotion
+page.privacy_policy.how_we_use_your_information.subtab6: Vous envoyer des emails
+page.privacy_policy.how_we_use_your_information.subtab7: Détecter et prévenir la fraude
+page.privacy_policy.log_files.title: Fichiers de log
+page.privacy_policy.log_files.description: StackUp suit une procédure standard d'utilisation des fichiers journaux. Ces fichiers enregistrent les visiteurs lorsqu'ils visitent des sites Web. Toutes les sociétés d'hébergement le font et font partie de l'analyse des services d'hébergement. Les informations collectées par les fichiers journaux incluent les adresses IP (protocole Internet), le type de navigateur, le fournisseur d'accès Internet (FAI), l'horodatage, les pages de renvoi/sortie et éventuellement le nombre de clics. Ceux-ci ne sont liés à aucune information personnellement identifiable. Le but de l'information est d'analyser les tendances, d'administrer le site, de suivre le mouvement des utilisateurs sur le site Web et de recueillir des informations démographiques.
+page.privacy_policy.cookies_and_web_beacons.title: Cookies et balises Web
+page.privacy_policy.cookies_and_web_beacons.description: Comme tout autre site Web, StackUp utilise des "cookies". Ces cookies sont utilisés pour stocker des informations, y compris les préférences des visiteurs et les pages du site Web auxquelles le visiteur a accédé ou visité. Les informations sont utilisées pour optimiser l'expérience des utilisateurs en personnalisant le contenu de notre page Web en fonction du type de navigateur des visiteurs et/ou d'autres informations.
+page.privacy_policy.advertising_partners_privacy_policies.title: Politiques de confidentialité des partenaires publicitaires
+page.privacy_policy.advertising_partners_privacy_policies.description1: Vous pouvez consulter cette liste pour trouver la politique de confidentialité de chacun des partenaires publicitaires de StackUp.
+page.privacy_policy.advertising_partners_privacy_policies.description2: Les serveurs publicitaires ou réseaux publicitaires tiers utilisent des technologies telles que les cookies, JavaScript ou les balises Web qui sont utilisées dans leurs publicités et liens respectifs qui apparaissent sur StackUp, qui sont envoyés directement au navigateur des utilisateurs. Ils reçoivent automatiquement votre adresse IP lorsque cela se produit. Ces technologies sont utilisées pour mesurer l'efficacité de leurs campagnes publicitaires et/ou pour personnaliser le contenu publicitaire que vous voyez sur les sites Web que vous visitez.
+page.privacy_policy.advertising_partners_privacy_policies.description3: Notez que StackUp n'a aucun accès ni aucun contrôle sur ces cookies qui sont utilisés par des annonceurs tiers.
+page.privacy_policy.third_party_privacy_policies.title: Politiques de confidentialité des tiers
+page.privacy_policy.third_party_privacy_policies.description1: La politique de confidentialité de StackUp ne s'applique pas aux autres annonceurs ou sites Web. Ainsi, nous vous conseillons de consulter les politiques de confidentialité respectives de ces serveurs publicitaires tiers pour des informations plus détaillées. Il peut inclure leurs pratiques et instructions sur la façon de se retirer de certaines options.
+page.privacy_policy.third_party_privacy_policies.description2: Vous pouvez choisir de désactiver les cookies via les options de votre navigateur. Pour connaître des informations plus détaillées sur la gestion des cookies avec des navigateurs Web spécifiques, vous pouvez les trouver sur les sites Web respectifs des navigateurs.
+page.privacy_policy.ccpa_privacy_rights.title: Droits de confidentialité CCPA (Ne vendez pas mes informations personnelles)
+page.privacy_policy.ccpa_privacy_rights.description1: En vertu du CCPA, entre autres droits, les consommateurs californiens ont le droit de
+page.privacy_policy.ccpa_privacy_rights.description2: Demander qu'une entreprise qui collecte les données personnelles d'un consommateur divulgue les catégories et les éléments spécifiques de données personnelles qu'une entreprise a collectées sur les consommateurs.
+page.privacy_policy.ccpa_privacy_rights.description3: Demander à une entreprise de supprimer toutes les données personnelles sur le consommateur qu'une entreprise a collectées.
+page.privacy_policy.ccpa_privacy_rights.description4: Demander qu'une entreprise qui vend les données personnelles d'un consommateur ne vende pas les données personnelles du consommateur.
+page.privacy_policy.ccpa_privacy_rights.description5: Si vous faites une demande, nous avons un mois pour vous répondre. Si vous souhaitez exercer l'un de ces droits, veuillez nous contacter.
+page.privacy_policy.gdpr_data_protection_rights.title: Droits de protection des données GDPR
+page.privacy_policy.gdpr_data_protection_rights.description1: Nous souhaitons nous assurer que vous êtes pleinement conscient de tous vos droits en matière de protection des données. Chaque utilisateur a droit à ce qui suit
+page.privacy_policy.gdpr_data_protection_rights.description2: Le droit d'accès – Vous avez le droit de demander des copies de vos données personnelles. Nous pouvons vous facturer une somme modique pour ce service.
+page.privacy_policy.gdpr_data_protection_rights.description3: Le droit de rectification – Vous avez le droit de nous demander de corriger toute information que vous jugez inexacte. Vous avez également le droit de nous demander de compléter les informations que vous jugez incomplètes.
+page.privacy_policy.gdpr_data_protection_rights.description4: Le droit à l'effacement – Vous avez le droit de nous demander d'effacer vos données personnelles, sous certaines conditions.
+page.privacy_policy.gdpr_data_protection_rights.description5: Le droit de restreindre le traitement – Vous avez le droit de nous demander de restreindre le traitement de vos données personnelles, sous certaines conditions.
+page.privacy_policy.gdpr_data_protection_rights.description6: Le droit de vous opposer au traitement – Vous avez le droit de vous opposer à notre traitement de vos données personnelles, sous certaines conditions.
+page.privacy_policy.gdpr_data_protection_rights.description7: Le droit à la portabilité des données – Vous avez le droit de nous demander de transférer les données que nous avons collectées à une autre organisation, ou directement à vous, sous certaines conditions.
+page.privacy_policy.gdpr_data_protection_rights.description8: Si vous faites une demande, nous avons un mois pour vous répondre. Si vous souhaitez exercer l'un de ces droits, veuillez nous contacter.
+page.privacy_policy.children_information.title: Informations sur les enfants
+page.privacy_policy.children_information.description1: Une autre partie de notre priorité est d'ajouter une protection pour les enfants lors de l'utilisation d'Internet. Nous encourageons les parents et les tuteurs à observer, participer et/ou surveiller et guider leur activité en ligne.
+page.privacy_policy.children_information.description2: StackUp ne collecte sciemment aucune information personnelle identifiable d'enfants de moins de 13 ans. Si vous pensez que votre enfant a fourni ce type d'informations sur notre site Web, nous vous encourageons fortement à nous contacter immédiatement et nous ferons de notre mieux pour supprimer rapidement ces informations de nos dossiers.
 
 # Terms of Use
 page.terms_of_use.title: Conditions d'utilisation
