feat: add form stack & categ

--- a/translations/admin+intl-icu.en.yaml
+++ b/translations/admin+intl-icu.en.yaml
@@ -22,6 +22,10 @@ flash.common.created: Created successfully.
 flash.common.updated: Updated successfully.
 flash.common.deleted: Deleted successfully.
 
+## Admin
+page.admin.title: Administration
+page.admin.description: The administration for StackUp
+
 ## User
 flash.user.validation_email_sent: Validation email sent.
 flash.user.already_verified: This user is already verified.
