--- a/translations/tables+intl-icu.fr.yaml
+++ b/translations/tables+intl-icu.fr.yaml
@@ -1,6 +1,8 @@
 # Common
 common.empty: Pas de données disponibles
 common.actions: Actions
+common.yes: Oui
+common.no: Non
 common.name: Nom
 common.type: Type
 common.status: Status
@@ -29,7 +31,9 @@ user.role.role_user: Utilisateur
 # Requests
 request.id: Requête
 request.last_changed_at: Dernier changement le
-request.votes_number: Nombre de votes
+request.votes.number: Nombre de Votes
+request.votes.down: Votes négatifs
+request.votes.up: Votes positifs
 
 # Profile
 profile.id: Profil
@@ -40,3 +44,7 @@ vote.up_vote: Up vote
 # Tech
 tech.id: Tech
 tech.collection: Techs
+
+# Category
+category.id: Catégorie
+category.collection: Catégories
