--- a/translations/messages+intl-icu.en.yaml
+++ b/translations/messages+intl-icu.en.yaml
@@ -17,7 +17,7 @@ common.global_search: Global search
 common.or: or
 common.admin: Administration
 common.upload.default_alt: Uploaded image
-common.upload.click_or_drop: Drag and drop a file or click t    o browse
+common.upload.click_or_drop: Drag and drop a file or click to browse
 common.first_page: First page ({ number })
 common.previous_page: Previous page ({ number })
 common.page_number: Page { number }
@@ -111,7 +111,7 @@ page.about_us.presentation: Here is the challenge project of the first semester,
 ## Contact
 page.contact.title: Contact
 page.contact.description: Learn how to get in touch with the StackUp staff here.
-page.contact.presentation: to contact us, please send us an email at challenge@stack_up.tech
+page.contact.presentation: to contact us, please send us an email at contact@stack_up.tech
 
 ## Cookie Policy
 page.cookie_policy.title: Cookie Policy for StackUp
