--- a/translations/messages+intl-icu.fr.yaml
+++ b/translations/messages+intl-icu.fr.yaml
@@ -73,7 +73,7 @@ page.about_us.presentation: Voici le projet de challenge du premier semeste, ici
 # Contact
 page.contact.title: Contact
 page.contact.description: Apprenez comment entrer en contact avec l'équipe StackUp ici.
-page.contact.presentation: Pour nous contacter, veuillez s'il vous plait nous envoyer un mail à challenge@stack-up.tech
+page.contact.presentation: Pour nous contacter, veuillez s'il vous plait nous envoyer un mail à contact@stack-up.tech
 
 
 # Cookie Policy
