--- a/translations/components+intl-icu.fr.yaml
+++ b/translations/components+intl-icu.fr.yaml
@@ -2,6 +2,10 @@
 global_search.search: Rechercher
 global_search.type_to_search: Tapez n'importe quoi pour commencer la recherche.
 global_search.search_username: Par exemple, essayez de saisir { username }...
+global_search.techs: Technologies
+global_search.techs.more: Rechercher plus de technologies
+global_search.stacks: Stacks
+global_search.stacks.more: Rechercher plus de stacks
 global_search.profiles: Profils
 global_search.profiles.more: Rechercher plus de profils
 global_search.total_search_time: 'Temps de recherche : { time } ms'
