--- a/translations/admin+intl-icu.en.yaml
+++ b/translations/admin+intl-icu.en.yaml
@@ -10,6 +10,7 @@ common.created_by: Created by
 common.updated_by: Updated by
 common.create: Create
 common.edit: Edit
+common.new: Add
 common.delete: Delete
 common.back_to_list: Back to list
 common.save: Save
@@ -64,6 +65,10 @@ page.stack.description: List of stacks saved on the website.
 page.stack_show.title: Information of { name }
 page.stack_show.description: All information of { name }.
 
+### New
+page.stack_new.title: Add a new stack
+page.stack_new.description: Add all informations about the new stack.
+
 ### Edit
 page.stack_edit.title: Edit stack
 page.stack_edit.description: Edit a stack's information.
@@ -80,6 +85,10 @@ page.tech.description: List of tech saved on the website.
 ### Show
 page.tech_show.title: Information of { name }
 page.tech_show.description: All information of { name }.
+
+### New
+page.tech_new.title: Add a new tech
+page.tech_new.description: Add all informations about the new tech.
 
 ### Edit
 page.tech_edit.title: Edit tech
@@ -105,40 +114,6 @@ page.category_edit.description: Edit a category's information.
 ### Delete
 page.category_delete.title: Delete category
 page.category_delete.content: Are you sure you want to delete this category ?
-
-## Request
-### List
-page.request.title: Requests
-page.request.description: List of request saved on the website.
-
-### Show
-page.request_show.title: Information of the request
-page.request_show.description: All information of the request.
-
-### Edit
-page.request_edit.title: Edit request
-page.request_edit.description: Edit a request's information.
-
-### Delete
-page.request_delete.title: Delete request
-page.request_delete.content: Are you sure you want to delete this request ?
-
-## Vote
-### List
-page.vote.title: Votes
-page.vote.description: List of vote saved on the website.
-
-### Show
-page.vote_show.title: Information of the vote
-page.vote_show.description: All information of the vote.
-
-### Edit
-page.vote_edit.title: Edit vote
-page.vote_edit.description: Edit a vote's information.
-
-### Delete
-page.vote_delete.title: Delete vote
-page.vote_delete.content: Are you sure you want to delete this vote ?
 
 # Flashes
 ## User
