--- a/translations/messages+intl-icu.en.yaml
+++ b/translations/messages+intl-icu.en.yaml
@@ -277,6 +277,7 @@ tech_picture.current_tech_picture: The tech's current picture.
 
 ## Category
 category.name: Name
+category.collection: Categories
 category.name.help: A category's name must contain between 2 and 30 characters, using letters and white spaces only.
 
 # Components
